# positional_chess

./: .gitignore  README.md  vercel.json
.github/workflows/: ci.yml
client/: eslint.config.js  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: AboutPosition.jsx  Board.jsx  CapturedStrip.jsx  ChessPieceIcon.jsx  EvalBar.jsx  MoveCharacter.jsx  MoveExplanation.jsx  PositionQualityBars.jsx  QualityIcon.jsx  SettingsPanel.jsx  Tooltip.jsx  TopMoves.jsx
client/src/engine/: analysis.js  analyzer-rs.js  chess.js  connectors.js  engine.js  explainer.js  full-explanation.js  heatmap.js  openings.js  positions.js  taglines.js
client/src/engine/__tests__/: analysis.test.js  chess.test.js  connectors.test.js  explainer.test.js  openings.test.js
client/src/engine/wasm-rs/: engine_rs.d.ts  engine_rs.js  engine_rs_bg.wasm  engine_rs_bg.wasm.d.ts
engine-rs/: Cargo.toml  build.sh
engine-rs/src/: eval.rs  explanation.rs  lib.rs  motifs.rs  piece_value.rs  see.rs  util.rs
engine-rs/tests/: motif_assertions.rs  precision_recall.rs
server/: .gitignore  index.js  package-lock.json  package.json
server/src/: api.js  chess.js  engine.js  explainer.js
tools/audit/: audit.mjs  report.json  report.md  seed.mjs  stockfish.mjs  wasm.mjs
