[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"
description = "Research-grade explainable-positional-chess analyzer (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Bitboard chess primitives — well-tested move/attack generation, FEN parsing.
shakmaty = "0.27"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"     # size-optimised
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
# wasm-opt's bundled wasm-opt is too old for our wasm32 bulk-memory output;
# disable it. The opt-level=z + LTO settings above already get most of
# the benefit and the resulting binary is well under 100KB.
wasm-opt = false
